# pgvector

./: .env  README.md  docker-compose.yaml  pyproject.toml  test.py
.github/workflows/: deploy-postgres.yml
ai_agent/: .env
init-scripts/: init.sql
src/: .env  setup.py
src/ai_agent/: __init__.py  agent.py  config.py  database.py  embd.py  queries.py  vector.py  vector_store.py
storage/: index_store.json
